fix: navbar position and overflow

--- a/essentials_of_microeconomics/www/main.css
+++ b/essentials_of_microeconomics/www/main.css
@@ -9,6 +9,7 @@ div :has(img) {
 } 
 
 .tab-pane {
+    padding-top: 70px !important;
     max-width: 728px;
     margin: 0 auto;
 }
